bindings/rust/wasmedge-sys/docs/wasmedge.h

/// WASM Value type enumeration.
enum WasmEdge_ValType {
  WasmEdge_ValType_I32 = 0x7FU,
  WasmEdge_ValType_I64 = 0x7EU,
  WasmEdge_ValType_F32 = 0x7DU,
  WasmEdge_ValType_F64 = 0x7CU,
  WasmEdge_ValType_V128 = 0x7BU,
  WasmEdge_ValType_FuncRef = 0x70U,
  WasmEdge_ValType_ExternRef = 0x6FU
};
/// WasmEdge WASM value struct.
typedef struct WasmEdge_Value {
  unsigned __int128 Value;
  /// The value type is used in the parameters of invoking functions. For the
  /// return values of invoking functions, this member will always be
  /// `WasmEdge_ValType_I32`. Users should use APIs to retrieve the WASM
  /// function's `WasmEdge_FunctionTypeContext` to get the actual return list
  /// value types, and then use the corresponding `WasmEdge_ValueGet` functions
  /// to retrieve the value.
  enum WasmEdge_ValType Type;
} WasmEdge_Value;
/// WasmEdge string struct.
typedef struct WasmEdge_String {
  uint32_t Length;
  const char *Buf;
} WasmEdge_String;
/// Opaque struct of WASM execution result.
typedef struct WasmEdge_Result {
  uint8_t Code;
} WasmEdge_Result;
/// Opaque struct of WasmEdge AST module.
typedef struct WasmEdge_ASTModuleContext WasmEdge_ASTModuleContext;
/// Opaque struct of WasmEdge interpreter.
typedef struct WasmEdge_InterpreterContext WasmEdge_InterpreterContext;
/// Opaque struct of WasmEdge store.
typedef struct WasmEdge_StoreContext WasmEdge_StoreContext;
/// Opaque struct of WasmEdge function instance.
typedef struct WasmEdge_FunctionInstanceContext
    WasmEdge_FunctionInstanceContext;
/// Opaque struct of WasmEdge table instance.
typedef struct WasmEdge_TableInstanceContext WasmEdge_TableInstanceContext;
/// Opaque struct of WasmEdge import object.
typedef struct WasmEdge_ImportObjectContext WasmEdge_ImportObjectContext;
/// Get the result message.
///
/// The returned string must __NOT__ be freed.
///
/// \param Res the WasmEdge_Result struct.
///
/// \returns NULL-terminated C string of the corresponding error message.
WASMEDGE_CAPI_EXPORT extern const char *
WasmEdge_ResultGetMessage(const WasmEdge_Result Res);
/// Instantiate WasmEdge AST Module into a store.
///
/// Instantiate the WasmEdge AST Module as an active anonymous module in store.
/// You can call `WasmEdge_StoreGetActiveModule` to retrieve the active module
/// instance.
///
/// \param Cxt the WasmEdge_InterpreterContext to instantiate the module.
/// \param StoreCxt the WasmEdge_StoreContext to store the instantiated module.
/// \param ASTCxt the WasmEdge AST Module context generated by loader or
/// compiler.
///
/// \returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error
/// message.
WASMEDGE_CAPI_EXPORT extern WasmEdge_Result
WasmEdge_InterpreterInstantiate(WasmEdge_InterpreterContext *Cxt,
                                WasmEdge_StoreContext *StoreCxt,
                                const WasmEdge_ASTModuleContext *ASTCxt);
/// Register and instantiate WasmEdge import object into a store.
///
/// Instantiate the instances in WasmEdge import object context and register
/// into a store with their exported name and the host module name.
///
/// \param Cxt the WasmEdge_InterpreterContext to instantiate the module.
/// \param StoreCxt the WasmEdge_StoreContext to store the instantiated module.
/// \param ImportCxt the WasmEdge_ImportObjectContext to register.
///
/// \returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error
/// message.
WASMEDGE_CAPI_EXPORT extern WasmEdge_Result WasmEdge_InterpreterRegisterImport(
    WasmEdge_InterpreterContext *Cxt, WasmEdge_StoreContext *StoreCxt,
    const WasmEdge_ImportObjectContext *ImportCxt);
/// Register and instantiate WasmEdge AST Module into a store.
///
/// Instantiate the instances in WasmEdge AST Module and register into a store
/// with their exported name and module name.
///
/// \param Cxt the WasmEdge_InterpreterContext to instantiate the module.
/// \param StoreCxt the WasmEdge_StoreContext to store the instantiated module.
/// \param ASTCxt the WasmEdge AST Module context generated by loader or
/// compiler.
/// \param ModuleName the module name WasmEdge_String for all exported
/// instances.
///
/// \returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error
/// message.
WASMEDGE_CAPI_EXPORT extern WasmEdge_Result WasmEdge_InterpreterRegisterModule(
    WasmEdge_InterpreterContext *Cxt, WasmEdge_StoreContext *StoreCxt,
    const WasmEdge_ASTModuleContext *ASTCxt, WasmEdge_String ModuleName);
/// Invoke a WASM function by name.
///
/// After instantiating a WASM module, the WASM module is registered as the
/// anonymous module in the store context. Then you can repeatedly call this
/// function to invoke exported WASM functions by their names until the store
/// context is reset or a new WASM module is registered or instantiated. For
/// calling the functions in registered WASM modules with names in store, please
/// use `WasmEdge_InterpreterInvokeRegistered` instead.
///
/// \param Cxt the WasmEdge_InterpreterContext.
/// \param StoreCxt the WasmEdge_StoreContext which the module instantiated in.
/// \param FuncName the function name WasmEdge_String.
/// \param Params the WasmEdge_Value buffer with the parameter values.
/// \param ParamLen the parameter buffer length.
/// \param [out] Returns the WasmEdge_Value buffer to fill the return values.
/// \param ReturnLen the return buffer length.
///
/// \returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error
/// message.
WASMEDGE_CAPI_EXPORT extern WasmEdge_Result WasmEdge_InterpreterInvoke(
    WasmEdge_InterpreterContext *Cxt, WasmEdge_StoreContext *StoreCxt,
    const WasmEdge_String FuncName, const WasmEdge_Value *Params,
    const uint32_t ParamLen, WasmEdge_Value *Returns, const uint32_t ReturnLen);
/// Invoke a WASM function by its module name and function name.
///
/// After registering a WASM module, the WASM module is registered with its name
/// in the store context. Then you can repeatedly call this function to invoke
/// exported WASM functions by their module names and function names until the
/// store context is reset.
///
/// \param Cxt the WasmEdge_InterpreterContext.
/// \param StoreCxt the WasmEdge_StoreContext which the module instantiated in.
/// \param ModuleName the module name WasmEdge_String.
/// \param FuncName the function name WasmEdge_String.
/// \param Params the WasmEdge_Value buffer with the parameter values.
/// \param ParamLen the parameter buffer length.
/// \param [out] Returns the WasmEdge_Value buffer to fill the return values.
/// \param ReturnLen the return buffer length.
///
/// \returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error
/// message.
WASMEDGE_CAPI_EXPORT extern WasmEdge_Result
WasmEdge_InterpreterInvokeRegistered(
    WasmEdge_InterpreterContext *Cxt, WasmEdge_StoreContext *StoreCxt,
    const WasmEdge_String ModuleName, const WasmEdge_String FuncName,
    const WasmEdge_Value *Params, const uint32_t ParamLen,
    WasmEdge_Value *Returns, const uint32_t ReturnLen);
/// Deletion of the WasmEdge_InterpreterContext.
///
/// After calling this function, the context will be freed and should __NOT__ be
/// used.
///
/// \param Cxt the WasmEdge_InterpreterContext to delete.
WASMEDGE_CAPI_EXPORT extern void
WasmEdge_InterpreterDelete(WasmEdge_InterpreterContext *Cxt);
/// <<<<<<<< WasmEdge interpreter functions <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<

/// >>>>>>>> WasmEdge store functions >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>

/// Creation of the WasmEdge_StoreContext.
///
/// The caller owns the object and should call `WasmEdge_StoreDelete` to free
/// it.
///
/// \returns pointer to context, NULL if failed.
WASMEDGE_CAPI_EXPORT extern WasmEdge_StoreContext *WasmEdge_StoreCreate(void);
/// Get the function instance context by the function name.
///
/// After instantiating a WASM module, the WASM module is registered into the
/// store context as an anonymous module. Then you can call this function to get
/// the exported function instance context of the anonymous module by the
/// function name. If you want to get the exported function of registered named
/// modules in the store context, please call
/// `WasmEdge_StoreFindFunctionRegistered` instead. The result function instance
/// context links to the function instance in the store context and owned by the
/// store context.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param Name the function name WasmEdge_String.
///
/// \returns pointer to the function instance context. NULL if not found.
WASMEDGE_CAPI_EXPORT extern WasmEdge_FunctionInstanceContext *
WasmEdge_StoreFindFunction(WasmEdge_StoreContext *Cxt,
                           const WasmEdge_String Name);
/// Get the function instance context by the function name and the module name.
///
/// After registering a WASM module, you can call this function to get the
/// exported function instance context by the module name and the function name.
/// The result function instance context links to the function instance in the
/// store context and owned by the store context.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param ModuleName the module name WasmEdge_String.
/// \param FuncName the function name WasmEdge_String.
///
/// \returns pointer to the function instance context. NULL if not found.
WASMEDGE_CAPI_EXPORT extern WasmEdge_FunctionInstanceContext *
WasmEdge_StoreFindFunctionRegistered(WasmEdge_StoreContext *Cxt,
                                     const WasmEdge_String ModuleName,
                                     const WasmEdge_String FuncName);
/// Get the table instance context by the table name.
///
/// After instantiating a WASM module, the WASM module is registered into the
/// store context as an anonymous module. Then you can call this function to get
/// the exported table instance context of the anonymous module by the table
/// name. If you want to get the exported table of registered named modules in
/// the store context, please call `WasmEdge_StoreFindTableRegistered` instead.
/// The result table instance context links to the table instance in the store
/// context and owned by the store context. The caller should __NOT__ call the
/// `WasmEdge_TableInstanceDelete`.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param Name the table name WasmEdge_String.
///
/// \returns pointer to the table instance context. NULL if not found.
WASMEDGE_CAPI_EXPORT extern WasmEdge_TableInstanceContext *
WasmEdge_StoreFindTable(WasmEdge_StoreContext *Cxt, const WasmEdge_String Name);
/// Get the table instance context by the table name and the module name.
///
/// After registering a WASM module, you can call this function to get the
/// exported table instance context by the module name and the table name.
/// The result table instance context links to the table instance in the store
/// context and owned by the store context. The caller should __NOT__ call the
/// `WasmEdge_TableInstanceDelete`.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param ModuleName the module name WasmEdge_String.
/// \param TableName the table name WasmEdge_String.
///
/// \returns pointer to the table instance context. NULL if not found.
WASMEDGE_CAPI_EXPORT extern WasmEdge_TableInstanceContext *
WasmEdge_StoreFindTableRegistered(WasmEdge_StoreContext *Cxt,
                                  const WasmEdge_String ModuleName,
                                  const WasmEdge_String TableName);
/// Deletion of the WasmEdge_StoreContext.
///
/// After calling this function, the context will be freed and should __NOT__ be
/// used.
///
/// \param Cxt the WasmEdge_StoreContext to delete.
WASMEDGE_CAPI_EXPORT extern void
WasmEdge_StoreDelete(WasmEdge_StoreContext *Cxt);
/// Deletion of the WasmEdge_TableInstanceContext.
///
/// After calling this function, the context will be freed and should __NOT__ be
/// used.
///
/// \param Cxt the WasmEdge_TableInstanceContext to delete.
WASMEDGE_CAPI_EXPORT extern void
WasmEdge_TableInstanceDelete(WasmEdge_TableInstanceContext *Cxt);