bindings/rust/wasmedge-sys/docs/wasmedge.rs

extern "C" {
    #[doc = " Instantiate WasmEdge AST Module into a store."]
    #[doc = ""]
    #[doc = " Instantiate the WasmEdge AST Module as an active anonymous module in store."]
    #[doc = " You can call `WasmEdge_StoreGetActiveModule` to retrieve the active module"]
    #[doc = " instance."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_InterpreterContext to instantiate the module."]
    #[doc = " \\param StoreCxt the WasmEdge_StoreContext to store the instantiated module."]
    #[doc = " \\param ASTCxt the WasmEdge AST Module context generated by loader or"]
    #[doc = " compiler."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error"]
    #[doc = " message."]
    pub fn WasmEdge_InterpreterInstantiate(
        Cxt: *mut WasmEdge_InterpreterContext,
        StoreCxt: *mut WasmEdge_StoreContext,
        ASTCxt: *const WasmEdge_ASTModuleContext,
    ) -> WasmEdge_Result;
}
extern "C" {
    #[doc = " Register and instantiate WasmEdge import object into a store."]
    #[doc = ""]
    #[doc = " Instantiate the instances in WasmEdge import object context and register"]
    #[doc = " into a store with their exported name and the host module name."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_InterpreterContext to instantiate the module."]
    #[doc = " \\param StoreCxt the WasmEdge_StoreContext to store the instantiated module."]
    #[doc = " \\param ImportCxt the WasmEdge_ImportObjectContext to register."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error"]
    #[doc = " message."]
    pub fn WasmEdge_InterpreterRegisterImport(
        Cxt: *mut WasmEdge_InterpreterContext,
        StoreCxt: *mut WasmEdge_StoreContext,
        ImportCxt: *const WasmEdge_ImportObjectContext,
    ) -> WasmEdge_Result;
}
extern "C" {
    #[doc = " Register and instantiate WasmEdge AST Module into a store."]
    #[doc = ""]
    #[doc = " Instantiate the instances in WasmEdge AST Module and register into a store"]
    #[doc = " with their exported name and module name."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_InterpreterContext to instantiate the module."]
    #[doc = " \\param StoreCxt the WasmEdge_StoreContext to store the instantiated module."]
    #[doc = " \\param ASTCxt the WasmEdge AST Module context generated by loader or"]
    #[doc = " compiler."]
    #[doc = " \\param ModuleName the module name WasmEdge_String for all exported"]
    #[doc = " instances."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error"]
    #[doc = " message."]
    pub fn WasmEdge_InterpreterRegisterModule(
        Cxt: *mut WasmEdge_InterpreterContext,
        StoreCxt: *mut WasmEdge_StoreContext,
        ASTCxt: *const WasmEdge_ASTModuleContext,
        ModuleName: WasmEdge_String,
    ) -> WasmEdge_Result;
}
extern "C" {
    #[doc = " Invoke a WASM function by name."]
    #[doc = ""]
    #[doc = " After instantiating a WASM module, the WASM module is registered as the"]
    #[doc = " anonymous module in the store context. Then you can repeatedly call this"]
    #[doc = " function to invoke exported WASM functions by their names until the store"]
    #[doc = " context is reset or a new WASM module is registered or instantiated. For"]
    #[doc = " calling the functions in registered WASM modules with names in store, please"]
    #[doc = " use `WasmEdge_InterpreterInvokeRegistered` instead."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_InterpreterContext."]
    #[doc = " \\param StoreCxt the WasmEdge_StoreContext which the module instantiated in."]
    #[doc = " \\param FuncName the function name WasmEdge_String."]
    #[doc = " \\param Params the WasmEdge_Value buffer with the parameter values."]
    #[doc = " \\param ParamLen the parameter buffer length."]
    #[doc = " \\param [out] Returns the WasmEdge_Value buffer to fill the return values."]
    #[doc = " \\param ReturnLen the return buffer length."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error"]
    #[doc = " message."]
    pub fn WasmEdge_InterpreterInvoke(
        Cxt: *mut WasmEdge_InterpreterContext,
        StoreCxt: *mut WasmEdge_StoreContext,
        FuncName: WasmEdge_String,
        Params: *const WasmEdge_Value,
        ParamLen: u32,
        Returns: *mut WasmEdge_Value,
        ReturnLen: u32,
    ) -> WasmEdge_Result;
}
extern "C" {
    #[doc = " Invoke a WASM function by its module name and function name."]
    #[doc = ""]
    #[doc = " After registering a WASM module, the WASM module is registered with its name"]
    #[doc = " in the store context. Then you can repeatedly call this function to invoke"]
    #[doc = " exported WASM functions by their module names and function names until the"]
    #[doc = " store context is reset."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_InterpreterContext."]
    #[doc = " \\param StoreCxt the WasmEdge_StoreContext which the module instantiated in."]
    #[doc = " \\param ModuleName the module name WasmEdge_String."]
    #[doc = " \\param FuncName the function name WasmEdge_String."]
    #[doc = " \\param Params the WasmEdge_Value buffer with the parameter values."]
    #[doc = " \\param ParamLen the parameter buffer length."]
    #[doc = " \\param [out] Returns the WasmEdge_Value buffer to fill the return values."]
    #[doc = " \\param ReturnLen the return buffer length."]
    #[doc = ""]
    #[doc = " \\returns WasmEdge_Result. Call `WasmEdge_ResultGetMessage` for the error"]
    #[doc = " message."]
    pub fn WasmEdge_InterpreterInvokeRegistered(
        Cxt: *mut WasmEdge_InterpreterContext,
        StoreCxt: *mut WasmEdge_StoreContext,
        ModuleName: WasmEdge_String,
        FuncName: WasmEdge_String,
        Params: *const WasmEdge_Value,
        ParamLen: u32,
        Returns: *mut WasmEdge_Value,
        ReturnLen: u32,
    ) -> WasmEdge_Result;
}
extern "C" {
    #[doc = " Deletion of the WasmEdge_InterpreterContext."]
    #[doc = ""]
    #[doc = " After calling this function, the context will be freed and should __NOT__ be"]
    #[doc = " used."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_InterpreterContext to delete."]
    pub fn WasmEdge_InterpreterDelete(Cxt: *mut WasmEdge_InterpreterContext);
}
extern "C" {
    #[doc = " Creation of the WasmEdge_StoreContext."]
    #[doc = ""]
    #[doc = " The caller owns the object and should call `WasmEdge_StoreDelete` to free"]
    #[doc = " it."]
    #[doc = ""]
    #[doc = " \\returns pointer to context, NULL if failed."]
    pub fn WasmEdge_StoreCreate() -> *mut WasmEdge_StoreContext;
}
extern "C" {
    #[doc = " Get the function instance context by the function name."]
    #[doc = ""]
    #[doc = " After instantiating a WASM module, the WASM module is registered into the"]
    #[doc = " store context as an anonymous module. Then you can call this function to get"]
    #[doc = " the exported function instance context of the anonymous module by the"]
    #[doc = " function name. If you want to get the exported function of registered named"]
    #[doc = " modules in the store context, please call"]
    #[doc = " `WasmEdge_StoreFindFunctionRegistered` instead. The result function instance"]
    #[doc = " context links to the function instance in the store context and owned by the"]
    #[doc = " store context."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param Name the function name WasmEdge_String."]
    #[doc = ""]
    #[doc = " \\returns pointer to the function instance context. NULL if not found."]
    pub fn WasmEdge_StoreFindFunction(
        Cxt: *mut WasmEdge_StoreContext,
        Name: WasmEdge_String,
    ) -> *mut WasmEdge_FunctionInstanceContext;
}
extern "C" {
    #[doc = " Get the function instance context by the function name and the module name."]
    #[doc = ""]
    #[doc = " After registering a WASM module, you can call this function to get the"]
    #[doc = " exported function instance context by the module name and the function name."]
    #[doc = " The result function instance context links to the function instance in the"]
    #[doc = " store context and owned by the store context."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param ModuleName the module name WasmEdge_String."]
    #[doc = " \\param FuncName the function name WasmEdge_String."]
    #[doc = ""]
    #[doc = " \\returns pointer to the function instance context. NULL if not found."]
    pub fn WasmEdge_StoreFindFunctionRegistered(
        Cxt: *mut WasmEdge_StoreContext,
        ModuleName: WasmEdge_String,
        FuncName: WasmEdge_String,
    ) -> *mut WasmEdge_FunctionInstanceContext;
}
extern "C" {
    #[doc = " Get the table instance context by the table name."]
    #[doc = ""]
    #[doc = " After instantiating a WASM module, the WASM module is registered into the"]
    #[doc = " store context as an anonymous module. Then you can call this function to get"]
    #[doc = " the exported table instance context of the anonymous module by the table"]
    #[doc = " name. If you want to get the exported table of registered named modules in"]
    #[doc = " the store context, please call `WasmEdge_StoreFindTableRegistered` instead."]
    #[doc = " The result table instance context links to the table instance in the store"]
    #[doc = " context and owned by the store context. The caller should __NOT__ call the"]
    #[doc = " `WasmEdge_TableInstanceDelete`."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param Name the table name WasmEdge_String."]
    #[doc = ""]
    #[doc = " \\returns pointer to the table instance context. NULL if not found."]
    pub fn WasmEdge_StoreFindTable(
        Cxt: *mut WasmEdge_StoreContext,
        Name: WasmEdge_String,
    ) -> *mut WasmEdge_TableInstanceContext;
}
extern "C" {
    #[doc = " Get the table instance context by the table name and the module name."]
    #[doc = ""]
    #[doc = " After registering a WASM module, you can call this function to get the"]
    #[doc = " exported table instance context by the module name and the table name."]
    #[doc = " The result table instance context links to the table instance in the store"]
    #[doc = " context and owned by the store context. The caller should __NOT__ call the"]
    #[doc = " `WasmEdge_TableInstanceDelete`."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param ModuleName the module name WasmEdge_String."]
    #[doc = " \\param TableName the table name WasmEdge_String."]
    #[doc = ""]
    #[doc = " \\returns pointer to the table instance context. NULL if not found."]
    pub fn WasmEdge_StoreFindTableRegistered(
        Cxt: *mut WasmEdge_StoreContext,
        ModuleName: WasmEdge_String,
        TableName: WasmEdge_String,
    ) -> *mut WasmEdge_TableInstanceContext;
}
